--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-   "name": "edupocket-api",
-   "version": "0.0.1",
+   "name": "vc-devs-api-v2",
+   "version": "2.0.0",
    "description": "Awesome project developed with TypeORM.",
    "devDependencies": {
       "@types/node": "^8.10.39",
@@ -8,19 +8,20 @@
       "typescript": "^3.2.4"
    },
    "dependencies": {
-      "@types/bcrypt": "^2.0.0",
+      "@types/bcryptjs": "^2.4.2",
       "@types/body-parser": "^1.17.0",
       "@types/express": "^4.16.1",
       "@types/jsonwebtoken": "^7.2.8",
       "@types/morgan": "^1.7.35",
       "@types/multer": "^1.3.7",
-      "bcrypt": "^2.0.1",
+      "bcryptjs": "^2.4.3",
       "body-parser": "^1.18.3",
       "chalk": "^2.4.2",
       "dotenv": "^6.2.0",
       "express": "^4.16.4",
       "http": "0.0.0",
       "jsonwebtoken": "^8.4.0",
+      "magical-mixin": "^0.1.0",
       "morgan": "^1.9.1",
       "multer": "^1.4.1",
       "mysql": "^2.16.0",
@@ -37,6 +38,7 @@
    "contributors": [],
    "license": "MIT",
    "scripts": {
-      "start": "pm2 start --name edupocket ts-node -- -P tsconfig.json src/app.ts -- --color --watch --log-date-format=\"YYYY-MM-DD HH:mm:ss\" && pm2 log"
+      "start": "ts-node src/app.ts",
+      "start:pm2": "pm2 start --name edupocket ts-node -- -P tsconfig.json src/app.ts -- --color --watch --log-date-format=\"YYYY-MM-DD HH:mm:ss\" && pm2 log"
    }
 }
